# SimpleInterpreter

./: CMakeLists.txt  Grammar.txt  Main.cpp  Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Visitor.cpp  Visitor.h
AST/: AST.h  ASTNode.h  CMakeLists.txt  State.cpp  State.h  VisitorBase.h
AST/ArithmeticExpression/: ABinaryOperation.cpp  ABinaryOperation.h  ArithmeticExpression.h  CMakeLists.txt  InputCommand.cpp  InputCommand.h  NumericLiteral.cpp  NumericLiteral.h  VariableRef.cpp  VariableRef.h
AST/BoolExpression/: BBinaryOperation.cpp  BBinaryOperation.h  BoolExpression.h  BoolLiteral.cpp  BoolLiteral.h  Comparision.cpp  Comparision.h  Negation.cpp  Negation.h
AST/Command/: Assignment.cpp  Assignment.h  Command.h  DoWhileLoop.cpp  DoWhileLoop.h  ForLoop.cpp  ForLoop.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  Sequence.cpp  Sequence.h  Skip.cpp  Skip.h  WhileLoop.cpp  WhileLoop.h
AST/Statement/: Assignment.cpp  Assignment.h  CMakeLists.txt  DoWhileLoop.cpp  DoWhileLoop.h  ForLoop.cpp  ForLoop.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  Sequence.cpp  Sequence.h  Skip.cpp  Skip.h  Statement.h  WhileLoop.cpp  WhileLoop.h
DemoCode/: Code
Error/: CMakeLists.txt  InterpreterError.h  SyntaxError.cpp  SyntaxError.h
include/: Parser.h  Token.h  Tokenizer.h  Visitor.h
include/AST/: AST.h  State.h
include/AST/ArithmeticExpression/: ArithmeticExpression.h  VariableRef.h
include/Error/: InterpreterError.h  SyntaxError.h
src/: Parser.cpp  Visitor.cpp
src/AST/: State.cpp
src/Error/: SyntaxError.cpp
(+22 files in other folders)
